[package]
name = "nestjs-nats-connector"
version = "0.2.0"
edition = "2021"
description = "nestjs nats connector"
license = "MIT"
authors=["mohammadjavad"]
repository="https://github.com/mohammadjavad948/nestjs-nats-connector"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
async-nats = "0.10.1"
serde_json = "1.0"
serde= { version = "1.0", features = ["derive"] }
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
